[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Runner/Runner.gd" type="Script" id=1]
[ext_resource path="res://Scripts/BFInterpreter.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Runner/File.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Runner/Build.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Runner/Help.gd" type="Script" id=5]

[node name="Runner" type="Node2D"]
script = ExtResource( 1 )

[node name="Interpreter" type="Node" parent="."]
script = ExtResource( 2 )

[node name="GUI" type="Control" parent="Interpreter"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Window" type="VBoxContainer" parent="Interpreter/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MenuBar" type="HBoxContainer" parent="Interpreter/GUI/Window"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="File" type="MenuButton" parent="Interpreter/GUI/Window/MenuBar"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"
align = 0
script = ExtResource( 3 )

[node name="Build" type="MenuButton" parent="Interpreter/GUI/Window/MenuBar"]
margin_left = 39.0
margin_right = 84.0
margin_bottom = 20.0
text = "Build"
script = ExtResource( 4 )

[node name="Help" type="MenuButton" parent="Interpreter/GUI/Window/MenuBar"]
margin_left = 88.0
margin_right = 130.0
margin_bottom = 20.0
text = "Help"
script = ExtResource( 5 )

[node name="IO" type="HSplitContainer" parent="Interpreter/GUI/Window"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CodeBox" type="TextEdit" parent="Interpreter/GUI/Window/IO"]
margin_right = 506.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RightPane" type="VBoxContainer" parent="Interpreter/GUI/Window/IO"]
margin_left = 518.0
margin_right = 1024.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Output" type="TextEdit" parent="Interpreter/GUI/Window/IO/RightPane"]
margin_right = 506.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true

[node name="CharEntry" type="HBoxContainer" parent="Interpreter/GUI/Window/IO/RightPane"]
margin_top = 528.0
margin_right = 506.0
margin_bottom = 552.0
size_flags_horizontal = 3

[node name="CharEnter" type="LineEdit" parent="Interpreter/GUI/Window/IO/RightPane/CharEntry"]
margin_right = 251.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="CharButton" type="Button" parent="Interpreter/GUI/Window/IO/RightPane/CharEntry"]
margin_left = 255.0
margin_right = 506.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Enter Char"

[node name="RunCode" type="Button" parent="Interpreter/GUI/Window/IO/RightPane"]
margin_top = 556.0
margin_right = 506.0
margin_bottom = 576.0
text = "RunCode"

[node name="CenterContainer" type="CenterContainer" parent="Interpreter/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="SaveFile" type="FileDialog" parent="Interpreter/GUI/CenterContainer"]
margin_left = 262.0
margin_top = 150.0
margin_right = 762.0
margin_bottom = 450.0
rect_min_size = Vector2( 500, 300 )
popup_exclusive = true
window_title = "Save As"
resizable = true
access = 2
filters = PoolStringArray( "*.bf" )
current_dir = "/home/frank/Dropbox/Godot/BF IDE"
current_path = "/home/frank/Dropbox/Godot/BF IDE/"

[node name="LoadFile" type="FileDialog" parent="Interpreter/GUI/CenterContainer"]
margin_left = 262.0
margin_top = 150.0
margin_right = 762.0
margin_bottom = 450.0
rect_min_size = Vector2( 500, 300 )
popup_exclusive = true
window_title = "Load"
mode = 0
access = 2
filters = PoolStringArray( "*.bf" )
current_dir = "/home/frank/Dropbox/Godot/BF IDE"
current_path = "/home/frank/Dropbox/Godot/BF IDE/"

[node name="About" type="AcceptDialog" parent="Interpreter/GUI/CenterContainer"]
margin_left = 421.0
margin_top = 254.0
margin_right = 603.0
margin_bottom = 346.0
window_title = "About"
dialog_text = "BF IDE by Frank Rodriguez

Version 0.1.0"

[node name="ExportC" type="FileDialog" parent="Interpreter/GUI/CenterContainer"]
margin_left = 262.0
margin_top = 150.0
margin_right = 762.0
margin_bottom = 450.0
rect_min_size = Vector2( 500, 300 )
window_title = "Export to C"
resizable = true
access = 2
filters = PoolStringArray( "*.c" )
current_dir = "/home/frank/Dropbox/Godot/BF IDE"
current_path = "/home/frank/Dropbox/Godot/BF IDE/"

[connection signal="optionPressed" from="Interpreter/GUI/Window/MenuBar/File" to="Interpreter" method="_on_File_optionPressed"]
[connection signal="optionPressed" from="Interpreter/GUI/Window/MenuBar/Build" to="Interpreter" method="_on_Build_optionPressed"]
[connection signal="optionPressed" from="Interpreter/GUI/Window/MenuBar/Help" to="Interpreter" method="_on_Help_optionPressed"]
[connection signal="pressed" from="Interpreter/GUI/Window/IO/RightPane/CharEntry/CharButton" to="Interpreter" method="_on_CharButton_pressed"]
[connection signal="pressed" from="Interpreter/GUI/Window/IO/RightPane/RunCode" to="Interpreter" method="_on_RunCode_pressed"]
[connection signal="file_selected" from="Interpreter/GUI/CenterContainer/SaveFile" to="Interpreter" method="_on_SaveFile_file_selected"]
[connection signal="file_selected" from="Interpreter/GUI/CenterContainer/LoadFile" to="Interpreter" method="_on_LoadFile_file_selected"]
[connection signal="file_selected" from="Interpreter/GUI/CenterContainer/ExportC" to="Interpreter" method="_on_ExportC_file_selected"]
